@@ -21,6 +21,7 @@
         * [BUGFIX]: #2781 Portable configuration directory can now be either in the running directory, or in applications directory. It's auto-detected.
         * [BUGFIX]: Optimized loading huge data sets into data grid. It's faster and the progress bar acts more smoothly.
         * [BUGFIX]: Shortcut for closing current window is now displayed in the context menu for taskbar.
+        * [BUGFIX]: "Skip first line" option in CSV import renamed to "First line represents CSV columns". Maybe this time it won't confused anyone.
 
 [3.0.2]
         * [ADDED]: Full support for the interface translations.
